// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries deletes the user 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Unknown type "Password".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries deletes the user 2`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: delete from "users" where "user_uid" = $1 returning * - invalid input syntax for type uuid: "{"uid":"8b686839-4c94-48ac-ac51-86d36b7bf17c"}"],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches single user 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Unknown argument "uid" on field "Query.getUser".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries it signs up user 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Unknown type "Password".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
